fixed spacing issues on smaller breakpoints

--- a/css/site.css
+++ b/css/site.css
@@ -61,7 +61,7 @@ h2 {
 }
 
 .l-box-lrg {
-    padding: 4em;
+    padding: 2em 1em;
     border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
@@ -193,7 +193,6 @@ a.pure-button-primary {
     overflow: hidden;
     height: 600px;
     opacity: .5;
-    background-position: -300px 0;
 }
 
 .image-text-head {
@@ -283,7 +282,7 @@ a.pure-button-primary {
 }
 
 .alternate {
-    width: 66.667%;
+    /*width: 66.667%;*/
     margin-left: auto;
     margin-right: auto;
 }
@@ -352,7 +351,15 @@ a.pure-button-primary {
     .image-container {
         background: url('../img/3.jpg') center top no-repeat;
         background-size: cover;
-        background-position: 0 -50px;
+        /*background-position: 0 -50px;*/
+    }
+
+    .l-box-lrg {
+        padding: 4em;
+    }
+
+    .alternate {
+        width: 66.667%; 
     }
 
 }
